# cns-efvi-ts

./: .gitignore  LICENSE  README.md  gen_doxygen  guess.sh  html-log.sh  log.sh  trc.sh  trc_update
conf/: builder.conf  opts.ts  tester.conf
conf/cs/: efvi-ts.yml
conf/scripts/: efvi-ts
efvi-ts/: Doxyfile  epilogue.c  footer.html  mainpage.dox  meson.build  meson_options.txt  package.dox  package.xml  prologue.c
efvi-ts/doc/dox_resources/: DoxygenLayout.xml  efvi_terminology.dox  tags.dox  tester_requirements.dox
efvi-ts/lib/: efvi_rpc.c  efvi_rpc.h  efvi_test.h  efvi_ts.c  efvi_ts.h  etherfabric  meson.build
efvi-ts/usecases/: driver_open_close.c  meson.build  package.dox  package.xml  simple_recv.c  simple_send.c
scripts/: guess.sh  run.sh
talib_efvi_ts/: efvirpc.x.m4  meson.build  rpc.c
talib_efvi_ts/include/: efvi_talib_common.h
trc/: globals.xml  top.xml  usecases.xml
